<resources>
    <string name="app_name">Органайзер</string>
    <string name="Title">Заголовок</string>
    <string name="Descript">Описание</string>
    <string name="Date">Дата</string>
    <string name="Time">Время</string>
    <string name="Save">Сохранить</string>
    <string name="Enter">Добавить задачу</string>
    <string name="task">Название</string>
    <string name="Enter_add">Напоминание...</string>
    <string name="Hello">Привет</string>
    <string name="Name">Органайзер</string>
    <string name="Egor">Егор МТ-202</string>
    <string name="off">Выполнено</string>
    <string name="del">Удалить</string>
</resources>