<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    app:backgroundTint="@null"
    tools:context=".ReminderActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="399dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:backgroundTint="@null">


            <ImageView
                android:id="@+id/mCancel"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="355dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_cross_symbol_icon_icons_com_74149" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Enter_add"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_background"
                android:hint="@string/task" />

            <EditText
                android:id="@+id/editDescript"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_background"
                android:hint="@string/Enter" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/Date"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/Time"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>


            <Button
                android:id="@+id/btnSbumit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Save"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>